# synthkit

./: Cargo.toml  README.md  samplr.rs
examples/: harmony.rs  samplr.rs
proto/: harmony.py  resamp.py  shift.py  third.py  wavio.py
src/: lib.rs  main.rs  midi.rs  mixer.rs  play.rs  retain_mut.rs  sample.rs  sampler.rs  wavio.rs
