# Copyright © 2019 Bart Massey
# [This program is licensed under the "MIT License"]
# Please see the file LICENSE in the source
# distribution of this software for license terms.

[package]
name = "synthkit"
version = "0.1.0"
authors = ["Bart Massey <bart@cs.pdx.edu>"]
edition = "2018"

[dependencies]
hound = "3.4.0"
portaudio-rs= "0.3.1"
midir = "0.5.0"
wmidi = "3.1.0"
dsp = "0.6.0"
num-complex = "0.2.4"
retain_mut = "0.1.1"
lazy_static = "1.4.0"
