# Copyright © 2019 Bart Massey
# [This program is licensed under the "MIT License"]
# Please see the file LICENSE in the source
# distribution of this software for license terms.

[package]
name = "synthkit"
version = "0.2.1"
authors = ["Bart Massey <bart@cs.pdx.edu>"]
edition = "2018"

[dependencies]
hound = "3.4"
midir = "0.5"
wmidi = "3.1"
dsp = "0.8.1"
num-complex = "0.2"
once_cell = "1.3"
portaudio-rs = "0.3"
