# Copyright © 2019 Bart Massey
# [This program is licensed under the "MIT License"]
# Please see the file LICENSE in the source
# distribution of this software for license terms.

[package]
name = "synthkit"
version = "0.3.0"
authors = ["Bart Massey <bart@cs.pdx.edu>"]
edition = "2021"

[dependencies]
hound = "3.4"
midir = "0.7.0"
wmidi = "4.0"
dsp = "0.10.1"
once_cell = "1.9"
portaudio-rs = "0.3.2"
